src/objects/IMS_Data_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Data_Protection_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Data Protection Terms?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Terms_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Terms Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <label>Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belgium &amp; Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Cote d&apos; Ivoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_For_Atypical_Combination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check For Atypical Combination?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Manager_Name__c</fullName>
        <description>Name of the Commercial Manager</description>
        <label>Commercial Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Owner_Email__c</fullName>
        <description>Commercial Manager Email</description>
        <label>Commercial Manager Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Owner_First_Name__c</fullName>
        <label>Commercial Owner First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Owner_Last_Name__c</fullName>
        <label>Commercial Owner Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Error_Message__c</fullName>
        <label>Delete Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>English_Translation__c</fullName>
        <label>English Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_License_Data_Supplier_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External License/Data Supplier Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo_Level__c</fullName>
        <label>Geo Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global Services</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Sub-National</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Real World Evidence</fullName>
                </value>
                <value>
                    <fullName>Anonymized Patient-Level Data / Transaction-Level</fullName>
                </value>
                <value>
                    <fullName>Reference Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_Legal_Entity__c</fullName>
        <label>IMS Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASESORIAS IMS HEALTH CHILE</fullName>
                </value>
                <value>
                    <fullName>ASESORIAS IQVIA SOLUTIONS CHILE LIMITADA</fullName>
                </value>
                <value>
                    <fullName>Asserta Centroamérica, S.A.</fullName>
                </value>
                <value>
                    <fullName>Cegedim Algerie</fullName>
                </value>
                <value>
                    <fullName>Datandina Ecuador</fullName>
                </value>
                <value>
                    <fullName>DE04 - IMS Software AG, Bonn</fullName>
                </value>
                <value>
                    <fullName>DE 50 - IMS HEALTH GmbH</fullName>
                </value>
                <value>
                    <fullName>Dummy Legal Entity</fullName>
                </value>
                <value>
                    <fullName>GB 60 - IMS Hospital Group</fullName>
                </value>
                <value>
                    <fullName>GERS Maghreb Sarl</fullName>
                </value>
                <value>
                    <fullName>Grace Data Corporation d/b/a Healthcare Data Solutions</fullName>
                </value>
                <value>
                    <fullName>Icomed</fullName>
                </value>
                <value>
                    <fullName>Icomed Belgium SA</fullName>
                </value>
                <value>
                    <fullName>ICOMED NV/SA</fullName>
                </value>
                <value>
                    <fullName>IMS AG</fullName>
                </value>
                <value>
                    <fullName>IMS AG (Mexico Representative Office)</fullName>
                </value>
                <value>
                    <fullName>IMS Health, Lda</fullName>
                </value>
                <value>
                    <fullName>IMS Health, S.A.</fullName>
                </value>
                <value>
                    <fullName>IMS Health, S.r.l.</fullName>
                </value>
                <value>
                    <fullName>IMS Health (PTY) LTD</fullName>
                </value>
                <value>
                    <fullName>IMS HEALTH a.s.</fullName>
                </value>
                <value>
                    <fullName>IMS Health Argentina S.A.</fullName>
                </value>
                <value>
                    <fullName>IMS Health Australia Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>IMS HEALTH B.V.</fullName>
                </value>
                <value>
                    <fullName>IMS Health Belgium B.V.B.A. / S.P.R.L.</fullName>
                </value>
                <value>
                    <fullName>IMS Health Canada Inc.</fullName>
                </value>
                <value>
                    <fullName>IMS Health Consulting B.V.B.A. / S.P.R.L.</fullName>
                </value>
                <value>
                    <fullName>IMS Health del Peru</fullName>
                </value>
                <value>
                    <fullName>IMS Health de Venezuela C.A.</fullName>
                </value>
                <value>
                    <fullName>IMS Health do Brasil Ltda.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_Legal_Name__c</fullName>
        <label>IMS Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Master_Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IMS Master Legal Entity</label>
        <referenceTo>IMS_Master_Legal_Entity__c</referenceTo>
        <relationshipLabel>IMS Data Asset</relationshipLabel>
        <relationshipName>IMS_Data_Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_yes_provide_Q_A_format_reason__c</fullName>
        <description>Commercial Manager Q&amp;A format &amp; reason</description>
        <label>Offering level additional term</label>
        <length>36768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_AMA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is AMA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_IMS_AGProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is IMS AGProduct?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Notification_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Notification Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Restricted_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TPA Phase 2</description>
        <label>Is Restricted Data?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japanese_Translation__c</fullName>
        <label>Japanese Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Map_To_Secondary_Data_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Map To Secondary Data Asset</label>
        <referenceTo>IMS_Secondary_Data_Asset__c</referenceTo>
        <relationshipLabel>Old IMS Data Asset</relationshipLabel>
        <relationshipName>IMS_Data_Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Map_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup of IMS Data Asset to which this one is mapped.</description>
        <label>Map To</label>
        <referenceTo>IMS_Data_Asset__c</referenceTo>
        <relationshipLabel>IMS Data Asset</relationshipLabel>
        <relationshipName>Old_IMS_Data_Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needs_license_or_data_supplier_response__c</fullName>
        <description>Confirmation to the provisioning of the offering required an additional external license or data supplier confirmation</description>
        <label>Need license or data supplier permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_for_Sorting_Display__c</fullName>
        <description>Created by Rnau Issue_4465
for keeping 'Other' in last in sorted data asster list</description>
        <label>Other for Sorting Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>North Europe and Africa</fullName>
                </value>
                <value>
                    <fullName>South Europe and ME</fullName>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                </value>
                <value>
                    <fullName>East Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requires_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Manual_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Manual Review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Secondary_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added Under TPA-MC-ESPSFDCTPA-2796</description>
        <label>Requires Secondary Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Commercial_Reviewer_Email__c</fullName>
        <description>Added Under TPA-MC-ESPSFDCTPA-2796</description>
        <label>Secondary Commercial Reviewer Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Commercial_Reviewer_Name__c</fullName>
        <description>Added under TPA-MC-ESPSFDCTPA-2796</description>
        <label>Secondary Commercial Reviewer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Data_Asset_Count__c</fullName>
        <label>Secondary Data Asset Count</label>
        <summaryForeignKey>IMS_Secondary_Data_Asset__c.Primary_Data_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>IMS Data Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>BU__c</columns>
        <columns>Asset_Name__c</columns>
        <columns>Geo_Level__c</columns>
        <columns>IMS_Legal_Entity__c</columns>
        <columns>IMS_Legal_Name__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    
    <nameField>
        <displayFormat>Asset-{00000}</displayFormat>
        <label>Sequence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMS Data Asset</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Legal_Entity_Should_Exist</fullName>
        <active>true</active>
        <description>Validate non-other offerings should have the legal entities</description>
        <errorConditionFormula>IF(AND(Asset_Name__c != 'Other', Is_Active__c, ISPICKVAL(IMS_Legal_Entity__c, &quot;&quot;)), True, False)</errorConditionFormula>
        <errorDisplayField>IMS_Legal_Entity__c</errorDisplayField>
        <errorMessage>You must enter a legal entity value</errorMessage>
    </validationRules>
</CustomObject>